Instantiate app with elements with an ID

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <h1>Ear Training Buddy</h1>
 
   <div class="center pb-15 note-options">
-    <input type="radio" id="note1" name="questionType" checked>
-    <label for="note1">
+    <input type="radio" id="note1Radio" name="questionType" checked>
+    <label for="note1Radio">
       <svg viewBox="0 12 7 25">
         <defs>
           <path id="note" fill="#fff" d="m6.31 14.65c0-0.22-0.08-0.41-0.25-0.57-0.17-0.17-0.36-0.25-0.59-0.25-0.39 0-1.18 0.39-2.36 1.17-1.22 0.8-1.97 1.36-2.25 1.7-0.14 0.18-0.21 0.37-0.21 0.57 0 0.22 0.08 0.41 0.25 0.57 0.16 0.17 0.35 0.25 0.59 0.25 0.38 0 1.17-0.39 2.38-1.17 1.2-0.78 1.94-1.35 2.23-1.7 0.14-0.17 0.21-0.36 0.21-0.57m-1.04-1.44c1.12 0 1.68 0.48 1.68 1.45 0 0.47-0.14 1.02-0.41 1.64-0.27 0.61-0.64 1.08-1.09 1.41-1 0.68-2.26 1.01-3.77 1.01-1.12 0-1.68-0.48-1.68-1.44 0-0.43 0.14-0.97 0.41-1.62 0.26-0.62 0.63-1.1 1.09-1.43 1-0.68 2.26-1.01 3.77-1.01"/>
@@ -28,8 +28,8 @@
       </svg>
     </label>
 
-    <input type="radio" id="note2" name="questionType">
-    <label for="note2">
+    <input type="radio" id="note2Radio" name="questionType">
+    <label for="note2Radio">
       <svg viewBox="0 12 7 25">
         <use xlink:href="#stem" />
         <use xlink:href="#note" y="10" />
@@ -37,8 +37,8 @@
       </svg>
     </label>
 
-    <input type="radio" id="note3" name="questionType">
-    <label for="note3">
+    <input type="radio" id="note3Radio" name="questionType">
+    <label for="note3Radio">
       <svg viewBox="0 12 7 25">
         <use xlink:href="#stem" />
         <use xlink:href="#note" y="5" />
@@ -47,8 +47,8 @@
       </svg>
     </label>
 
-    <input type="radio" id="note4" name="questionType">
-    <label for="note4">
+    <input type="radio" id="note4Radio" name="questionType">
+    <label for="note4Radio">
       <svg viewBox="0 12 7 25">
         <use xlink:href="#stem" />
         <use xlink:href="#note" y="0" />
@@ -94,7 +94,7 @@
   </div>
   <div class="btn w-75" id="answerBtn">Answer</div>
 
-  <div id="answer" class="center"></div>
+  <div id="answerDiv" class="center"></div>
 
   <div class="options">
     <input type="checkbox" id="diatonicChk">
