make unselectable buttons

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </div>
 
   <div class="btn w-25" id="referenceBtn">
-    <div id="refNoteLabel">A</div>
+    <div id="refNoteLabel" class="unselectable">A</div>
     <svg width="18" height="18" viewBox="0 0 18 18" style="fill:#fff;stroke:#fff"><path d="M5 8l4 4 4-4z"/></svg>
     <select id="refNoteSelect">
       <option value="60">C</option>
@@ -78,8 +78,8 @@
     </select>
   </div>
 
-  <div class="btn w-75" id="playBtn">New</div>
-  <div class="btn w-25" id="hintBtn">
+  <div class="btn w-75 unselectable" id="playBtn">New</div>
+  <div class="btn w-25 unselectable" id="hintBtn">
     <svg width="38" height="38" viewBox="-2 0 27 25" style="fill:#fff;stroke:#fff">
       <defs>
         <path id="q-note" d="m21.75 13.5c0.63 0 1.15 0.16 1.58 0.49 0.4 0.35 0.61 0.79 0.61 1.33 0 0.9-0.46 1.74-1.39 2.52-0.94 0.78-1.94 1.17-3.01 1.17-0.62 0-1.15-0.16-1.58-0.49-0.4-0.35-0.61-0.79-0.61-1.33 0-0.9 0.47-1.74 1.41-2.52 0.91-0.78 1.91-1.17 2.99-1.17"/>
@@ -92,7 +92,7 @@
       <path d="M5.93 5.19 23.94 0V2.5L5.93 7.69v-2.5" />
     </svg>
   </div>
-  <div class="btn w-75" id="answerBtn">Answer</div>
+  <div class="btn w-75 unselectable" id="answerBtn">Answer</div>
 
   <div id="answerDiv" class="center"></div>
 
